[gd_scene load_steps=12 format=2]

[ext_resource path="res://GFX/HUD/bannerHanging.png" type="Texture" id=1]
[ext_resource path="res://GFX/HUD/coin_bronze.png" type="Texture" id=2]
[ext_resource path="res://GFX/HUD/lifes.png" type="Texture" id=3]
[ext_resource path="res://Fonts/candles_.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Gui/Gui.gd" type="Script" id=5]
[ext_resource path="res://GFX/HUD/pause_button.png" type="Texture" id=6]
[ext_resource path="res://GFX/HUD/pause_button_pressed.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 11
extra_spacing_space = 1
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 250, 250 )

[node name="Gui" type="CanvasLayer" groups=[
"GUI",
]]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.698334
margin_bottom = 0.698364
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -436.0
margin_top = 18.0
margin_right = -168.0
margin_bottom = 77.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 7.0
size_flags_horizontal = 7
size_flags_vertical = 7
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinCount" type="Label" parent="Control/TextureRect/HBoxContainer"]
margin_top = 4.0
margin_right = 72.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.901961, 0.819608, 0.141176, 1 )
text = "0"
align = 2

[node name="CoinIcon" type="TextureRect" parent="Control/TextureRect/HBoxContainer"]
margin_left = 76.0
margin_right = 136.0
margin_bottom = 71.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="LifeCount" type="Label" parent="Control/TextureRect/HBoxContainer"]
margin_left = 140.0
margin_top = 4.0
margin_right = 212.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.901961, 0.819608, 0.141176, 1 )
text = "0"
align = 2

[node name="LifeIcon" type="TextureRect" parent="Control/TextureRect/HBoxContainer"]
margin_left = 216.0
margin_right = 268.0
margin_bottom = 71.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="clock" type="Label" parent="Control"]
margin_left = 50.0
margin_top = 27.3916
margin_right = 206.0
margin_bottom = 104.392
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0000"
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stage" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -91.0
margin_top = 25.0
margin_right = 91.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.133333, 0.203922, 0.45098, 1 )
text = "Stage"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Container" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -114.036
margin_top = 21.1902
margin_right = -56.0361
margin_bottom = 86.1902
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="Control/Container"]
self_modulate = Color( 0.478431, 0.258824, 0.407843, 1 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
shape = SubResource( 4 )
action = "ui_cancel"
